--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row" id="row1">
+        <div class="row" id="row-1">
             <div class="col-9">
-                <a href="highScores.html" id="highScore">View High Scores</a>
+                <a href="highScores.html" id="yourhighScore">View High Scores</a>
             </div>
             <div class="col-3" id="timer">
                 <a>Time: 02:00</a>
@@ -25,13 +25,13 @@
             <h2>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</h2>
             <p class="lead">
                 <a class="btn btn-dark btn-lg" href="#" role="button" id="startQuiz">Start Quiz</a>
-                <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Enter your initials">
+                <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Please Enter your initials">
                 <a class="btn btn-dark btn-lg" href="highScores.html" role="button" id="buttonInitials">Submit</a>
             </p>
         </div>
     </div>
     <div class="container-fluid">
-        <div class="row" id="row2">
+        <div class="row" id="row-2">
                 <div class="col-4" id="questionsCard">
                     <div class="card text-center" style="width: 18rem;" id="cardMedia">
                         <div class="card-body">
@@ -54,18 +54,13 @@
                             </div>
                         </div>
                     </div>                
-                </div>
-            <div class="col-4" id="imageMedia">
-                <img src= "Copia de totally.png" class="img-responsive width=100%"/>    
-            </div>
+                </d
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>    
     <script type="text/javascript" src="script.js"></script>
-    <script type="text/javascript" src="high.js"></script>
+    <script type="text/javascript" src="highscore.js"></script>
 </body>
 </html>
-
-<!-- Fernando Soto Calis @hoffman1200 -->
