--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
                     <div class="card text-center" style="width: 18rem;" id="cardMedia">
                         <div class="card-body">
                             <h5 class="card-title">Questions</h5>
-                            <p class="card-text" id="questions">With supporting text below as a natural lead-in to additional content??</p>
+                            <p class="card-text" id="questions">Below will be the responses for the questoins</p>
                             <div class="row buttonRow">
-                                <a href="#" class="btn btn-dark quizBtn" id="button1">Go somewhere</a>
+                                <a href="#" class="btn btn-primary quizBtn" id="button1">Response 1</a>
                             </div>
                             <div class="row buttonRow">
-                                <a href="#" class="btn btn-dark quizBtn" id="button2">Go somewhere</a>
+                                <a href="#" class="btn btn-primary quizBtn" id="button2">Response 2</a>
                             </div>
                             <div class="row buttonRow">
-                                <a href="#" class="btn btn-dark quizBtn" id="button3">Go somewhere</a>
+                                <a href="#" class="btn btn-primary quizBtn" id="button3">Response 3</a>
                             </div>
                             <div class="row buttonRow">
-                                <a href="#" class="btn btn-dark quizBtn" id="button4">Go somewhere</a>
+                                <a href="#" class="btn btn-primary quizBtn" id="button4">Response 4</a>
                             </div>
                             <div class="row buttonRow">
                                 <p id="correctIncorrect"></p>
