--- a/index.html
+++ b/index.html
@@ -1,66 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Code Quiz</title>
-    <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="./style.css">
+    <script src="./quiz.js"></script>
+    <title>Coding Quiz</title>
 </head>
+
 <body>
-    <div class="container-fluid">
-        <div class="row" id="row-1">
-            <div class="col-9">
-                <a href="highScores.html" id="yourhighScore">View High Scores</a>
-            </div>
-            <div class="col-3" id="timer">
-                <a>Time: 02:00</a>
-            </div>
-        </div>
-    </div>
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container-fluid">
-            <h1 class="display-3">Coding Quiz Challenge</h1>
-            <h2>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</h2>
-            <p class="lead">
-                <a class="btn btn-dark btn-lg" href="#" role="button" id="startQuiz">Start Quiz</a>
-                <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Please Enter your initials">
-                <a class="btn btn-dark btn-lg" href="highScores.html" role="button" id="buttonInitials">Submit</a>
-            </p>
-        </div>
-    </div>
-    <div class="container-fluid">
-        <div class="row" id="row-2">
-                <div class="col-4" id="questionsCard">
-                    <div class="card text-center" style="width: 18rem;" id="cardMedia">
-                        <div class="card-body">
-                            <h5 class="card-title">Questions</h5>
-                            <p class="card-text" id="questions">Below will be the responses for the questoins</p>
-                            <div class="row buttonRow">
-                                <a href="#" class="btn btn-primary quizBtn" id="button1">Response 1</a>
-                            </div>
-                            <div class="row buttonRow">
-                                <a href="#" class="btn btn-primary quizBtn" id="button2">Response 2</a>
-                            </div>
-                            <div class="row buttonRow">
-                                <a href="#" class="btn btn-primary quizBtn" id="button3">Response 3</a>
-                            </div>
-                            <div class="row buttonRow">
-                                <a href="#" class="btn btn-primary quizBtn" id="button4">Response 4</a>
-                            </div>
-                            <div class="row buttonRow">
-                                <p id="correctIncorrect"></p>
-                            </div>
-                        </div>
-                    </div>                
-                </div>
-        </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>    
-    <script type="text/javascript" src="quiz.js"></script>
-    <script type="text/javascript" src="highscore.js"></script>
+
+    <header>
+
+    </header>
+
 </body>
+
 </html>
