--- a/index.html
+++ b/index.html
@@ -12,8 +12,29 @@
 <body>
 
     <header>
-
+        <button id="highscore" class="viewhighscore">High Scores</button>
+        <h1 id="timer">120</h1>
     </header>
+
+    <div class="container">
+        <div id="homepage">
+            <h1>Coding Quiz Challenge</h1>
+            <p>Welcome to the Coding Quiz Challenge! You will have 2 minutes to complete the challenge. For every wrong answer your time will decrease by 5 seconds. Good Luck!</p>
+            <button id="start-quiz-btn" class="btn">Start Quiz</button>
+        </div>
+
+        <div>
+            <div id="question" class="display">Questions</div>
+            <div id="options" class="display">
+                <button class="answers">Answer 1</button>
+                <button class="answers">Answer 2</button>
+                <button class="answers">Answer 3</button>
+                <button class="answers">Answer 4</button>
+            </div>
+        </div>
+
+        
+    </div>
 
 </body>
 
