--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
     <header>
         <button>View high scores</button>
-        <h1 id="countdown"> 120 </h1>
+        <h1 id="timer"> 120 </h1>
     </header>
     <div class="container">
-        <div id="question-container">
+        <div id="intro">
             <h1> Coding Quiz Challenge</h1>
             <p> Welcome to the Coding Quiz Challenge! You will have 2 minutes to complete the challenge. For every wrong
                 answer your time will decrease by 5 seconds. Good Luck!</p>
         </div>
         <div>
-            <div id="question" class="hide">Question</div>
-            <div id="answer-buttons" class="hide">
+            <div id="question" class="display">Question</div>
+            <div id="answer" class="display">
                 <button class="buttons">Answer 1</button>
                 <button class="buttons">Answer 2</button>
                 <button class="buttons">Answer 3</button>
@@ -32,22 +32,22 @@
         </div>
         </question>
         <div class="controls">
-            <button id="start-button" id="timer">Start Quiz</button>
-            <button id="next-button" class="hide">Next</button>
+            <button id="start" id="timer">Start Quiz</button>
+            <button id="next" class="display">Next</button>
 
         </div>
         <div class="container">
-            <div id="submit-initial-container" class="hide">
+            <div id="initials" class="display">
                 <h1 id="finished-text">All done!</h1>
                 <p id="final-score"></p>
                 <form>
                     <label for="initials">Enter Initials:</label>
                     <input type="text" id="initials" name="initials">
                 </form>
-                <button id="submit-button">Submit</button>
+                <button id="submit">Submit</button>
             </div>
         </div>
-        <div id="high-scores" class="hide">
+        <div id="high-scores" class="display">
             <h1>High Scores</h1>
             <button> Restart</button>
         </div>
